sass/navigation/_scroll-to-top.scss
#scroll-to-top {
	background: rgba(0, 0, 0, .4);
	bottom: 20px;
	cursor: pointer;
	height: 44px;
	line-height: 0;
	opacity: 0;
	padding-top: 17px;
	position: fixed;
	right: 20px;
  	transform: scale(0, 0);
  	transition: .3s;
	text-align: center;
	width: 50px; 
	z-index: 101;
	
	svg path {
		fill: #fff;
	}

	img, 
	svg {
		display: inline-block;
		height: 11px;
		width: 18px;	
	}

	&:hover {
		background: rgba(0, 0, 0, .65);
	}

	&.show {
		opacity: 1;
    	transform: scale(1, 1);
	}
}

